--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="style.css">
     
     <title>Challenge-4</title>
+    <link rel="stylesheet" type="text/css" href="style.sass">
 </head>
 <body>
 
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="grid-layout">
+  
+<nav class="navbar navbar-expand-lg navbar-light bg-light c1">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -42,36 +43,6 @@
 </nav
 
 
-
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="img/switch.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="img/3ds.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="img/mario.png" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-
     <div class="imagen-de-nintento">
 
     <img src="" title="nintento" name="nintento" alt="">
@@ -82,7 +53,7 @@
 
 
 
-    <header>
+    <header class="c2">
 
 
 
@@ -94,28 +65,19 @@
 
 
 <br>
-    <div class="nombre">
+    <div class="nombre ">
         <h2 class="titulo-completar-2" >Escribe tu nombre</h2>
         <br>
-<label class="nombre-text"  for="nombre">Escribre tu nombre</label>
-<input type="text" class="nombre-text" name="nombre">
-<input class="boton" type="submit">
+        <div class="c6">
+<label class="nombre-text"  for="nombre">Escribre tu Producto</label>
+<input type="text" class="" name="nombre">
 
+<input class="" type="submit">
+</div>
 </div>
 <br>
 
-<div class="check">
-    <h2 class="titulo-casillas">Complete las casillas</h2>
-    <br>
-<label class="productos" for="producto-1">producto-1</label>
-<input  class="productos" type="checkbox" name="producto-1">
-<label  class="productos" for="producto-2">producto-2</label>
-<input  class="productos" type="checkbox" name="producto-2">
-<label  class="productos" for="producto-3">producto-3</label>
-<input  class="productos" type="checkbox" name="producto-3">
 
-
-</div>
 
 
 
@@ -127,8 +89,8 @@
 
 
     </header>
-    <br><br><br><br><br><br>
-    <div class="NuestrosPartners">
+    <br><br><br><br><br><br><br>
+    <div class="NuestrosPartners c3">
          
         <img class="img" src="img/atari.png" alt="">
         <img class="img-2" src="img/image.jpg" alt="">
@@ -141,7 +103,40 @@
    
 <br><br><br>
 
-<footer>
+
+<div class="precios">
+
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/3ds.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Nintento 3ds</h5>
+      <a href="https://www.nintendo.com/search/es-ar/?q=3ds&p=1&cat=all&sort=df" class="btn btn-primary">ir</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/switch.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Nintento Switch</h5>
+      <a href="https://www.nintendo.com/es-ar/es-mx/store/games/best-sellers/" class="btn btn-primary">Ir</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="img/mario.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Mario Bros</h5>
+      <a href="https://www.nintendo.com/es-ar/store/games/deals/" class="btn btn-primary">Ir</a>
+    </div>
+  </div>
+  
+
+
+</div>
+
+<br><br>
+<footer c4>
 
 
 <a class="ir-nintento" href="https://www.nintendo.com/es-ar/">Ir a Nintento</a>
@@ -150,7 +145,7 @@
 </footer>
 
 
-
+</div>
 
 
 </body>
